# TextTrek

./: CMakeLists.txt  generator.cmake  vcpkg-configuration.json  vcpkg.json
proto/: cascade.proto
server/: CMakeLists.txt  main.cpp  main.h  server_grpc.cpp  server_grpc.h
server/fastText/: CMakeLists.txt
server/http/: App.cpp  App.h  AppComponent.hpp
server/http/controller/: MyController.hpp
server/http/dto/: DTOs.hpp
server/workers/: config.h  fasttext_worker.cpp  fasttext_worker.h  main_worker.cpp  main_worker.h  poppler_worker.cpp  poppler_worker.h  redis_worker.cpp  redis_worker.h  tesseract_worker.cpp  tesseract_worker.h
